--- a/dashboard.html
+++ b/dashboard.html
@@ -50,6 +50,7 @@
             </div>
         </section>
     </main>
+    <script src="js/utilities.js"></script>
     <script src="js/deposit.js"></script>
     <script src="js/withdraw.js"></script>
 </body>
